--- a/src/main/resources/views/login.fxml
+++ b/src/main/resources/views/login.fxml
@@ -11,28 +11,28 @@
         <VBox styleClass="dialog-wrapper">
             <JFXDialogLayout styleClass="form-dialog">
                 <heading>
-                    <Label>Welcome to mIFA !</Label>
+                    <Label>Welcome to mIFA - the IFA Messenger</Label>
                 </heading>
                 <body>
                     <VBox styleClass="form">
                         <HBox styleClass="icon-textfield-wrapper">
                             <FontIcon iconLiteral="fas-server" iconSize="24"/>
-                            <JFXTextField styleClass="big-textfield" fx:id="host" promptText="Server host">
+                            <JFXTextField styleClass="big-textfield" fx:id="host" promptText="localhost"/>
+                        </HBox>
+                        <HBox styleClass="icon-textfield-wrapper">
+                            <FontIcon iconLiteral="fas-user" iconSize="24"/>
+                            <JFXTextField styleClass="big-textfield" fx:id="nickname" promptText="Nickname*" >
                                 <validators>
-                                    <RequiredFieldValidator message="Input Required!">
+                                    <RequiredFieldValidator message="Nickname required">
                                         <FontIcon iconLiteral="fas-exclamation-triangle"/>
                                     </RequiredFieldValidator>
                                 </validators>
                             </JFXTextField>
                         </HBox>
-                        <HBox styleClass="icon-textfield-wrapper">
-                            <FontIcon iconLiteral="fas-user" iconSize="24"/>
-                            <JFXTextField styleClass="big-textfield" fx:id="nickname" promptText="Nickname" />
-                        </HBox>
                     </VBox>
                 </body>
                 <actions>
-                    <JFXButton onAction="#login" styleClass="primary-button" buttonType="RAISED" text="Join mIFA !" />
+                    <JFXButton onAction="#login" styleClass="primary-button" buttonType="RAISED" text="Join mIFA" />
                 </actions>
             </JFXDialogLayout>
         </VBox>
