--- a/src/main/resources/views/chat.fxml
+++ b/src/main/resources/views/chat.fxml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import javafx.geometry.Insets?>
+<?import com.jfoenix.controls.JFXTextArea?>
+<?import com.jfoenix.controls.JFXScrollPane?>
 
-<?import javafx.scene.control.Label?><?import com.jfoenix.controls.JFXTextField?><?import org.kordamp.ikonli.javafx.FontIcon?><?import javafx.geometry.Insets?><?import javafx.scene.control.Separator?><?import com.jfoenix.controls.JFXTextArea?><?import com.jfoenix.validation.RequiredFieldValidator?>
-<StackPane xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" >
+<?import javafx.scene.control.ScrollBar?><?import javafx.scene.control.ScrollPane?>
+<StackPane xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.mifa.client.gui.controllers.ChatController">
     <children>
         <GridPane maxHeight="Infinity" alignment="TOP_CENTER">
             <children>
@@ -13,21 +19,21 @@
                     </padding>
                     <VBox spacing="30">
                         <HBox styleClass="icon-textfield-wrapper" spacing="20">
-                            <JFXTextField styleClass="medium-textfield" fx:id="addRoom" promptText="Add a room" />
-                            <FontIcon iconLiteral="fas-plus-square" iconSize="20" />
+                            <JFXTextField styleClass="medium-textfield" fx:id="roomToAdd" promptText="Add a room" />
+                            <FontIcon iconLiteral="fas-plus-square" styleClass="icon-button" iconSize="20" onMouseClicked="#addRoom" />
                         </HBox>
-                        <VBox styleClass="room-list">
-                            <HBox styleClass="room">
+                        <VBox styleClass="room-list" fx:id="roomList">
+                            <HBox styleClass="room" onMouseClicked="#changeRoom" userData="room-1">
                                 <FontIcon iconLiteral="fas-users" iconSize="24" />
                                 <Label>Room 1</Label>
                             </HBox>
-                            <HBox styleClass="room">
+                            <HBox styleClass="room" onMouseClicked="#changeRoom" userData="long-room-1">
                                 <FontIcon iconLiteral="fas-users" iconSize="24" />
                                 <Label>Long Room 1</Label>
                             </HBox>
-                            <HBox styleClass="room">
+                            <HBox styleClass="room" onMouseClicked="#changeRoom" userData="long-room-2">
                                 <FontIcon iconLiteral="fas-users" iconSize="24" />
-                                <Label>Long Room 1</Label>
+                                <Label>Long Room 2</Label>
                             </HBox>
                         </VBox>
                     </VBox>
@@ -39,35 +45,35 @@
                     </padding>
                     <VBox GridPane.rowIndex="0" spacing="10">
                         <Label styleClass="title-1">Room 1</Label>
-                        <HBox styleClass="message-other">
-                            <VBox styleClass="message-author">
-                                <FontIcon iconLiteral="fas-user" iconSize="50" />
-                                <Label>Bastien</Label>
-                            </VBox>
-                            <VBox styleClass="message-content">
-                                <Label>Message 1</Label>
-                                <Label>Super long message 2</Label>
-                                <Label>Super long message 3</Label>
-                                <Label>Message 4</Label>
-                            </VBox>
-                        </HBox>
-                        <HBox styleClass="message-me">
-                            <VBox styleClass="message-content">
-                                <Label>Message 1</Label>
-                                <Label>Super long message 2</Label>
-                                <Label>Super long message 3</Label>
-                                <Label>Message 4</Label>
-                            </VBox>
-                            <VBox styleClass="message-author">
-                                <FontIcon iconLiteral="fas-user" iconSize="50" />
-                                <Label>Bastien</Label>
-                            </VBox>
-                        </HBox>
+                        <ScrollPane maxHeight="Infinity" fitToWidth="true">
+                            <content>
+                                <VBox styleClass="messages-list" fx:id="messagesList">
+                                    <HBox styleClass="message-other">
+                                        <VBox styleClass="message-author">
+                                            <FontIcon iconLiteral="fas-user" iconSize="50" />
+                                            <Label>Author</Label>
+                                        </VBox>
+                                        <VBox styleClass="message-content">
+                                            <Label>Message 1</Label>
+                                        </VBox>
+                                    </HBox>
+                                    <HBox styleClass="message-me">
+                                        <VBox styleClass="message-content">
+                                            <Label>Message 1</Label>
+                                        </VBox>
+                                        <VBox styleClass="message-author">
+                                            <FontIcon iconLiteral="fas-user" iconSize="50" />
+                                            <Label>Author</Label>
+                                        </VBox>
+                                    </HBox>
+                                </VBox>
+                            </content>
+                        </ScrollPane>
                     </VBox>
                     <StackPane GridPane.rowIndex="1" GridPane.hgrow="always">
                         <HBox alignment="CENTER" spacing="10">
-                            <JFXTextArea promptText="Say something..." labelFloat="true" maxHeight="50"></JFXTextArea>
-                            <FontIcon iconLiteral="far-paper-plane" iconSize="32" />
+                            <JFXTextArea fx:id="message" promptText="Say something..." labelFloat="true" maxHeight="50"></JFXTextArea>
+                            <FontIcon onMouseClicked="#sendMessage" iconLiteral="far-paper-plane" iconSize="32" styleClass="icon-button" />
                         </HBox>
                     </StackPane>
                     <rowConstraints>
