--- a/src/main/resources/controls/ChatroomControl.fxml
+++ b/src/main/resources/controls/ChatroomControl.fxml
@@ -9,7 +9,8 @@
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import javafx.geometry.Insets?>
-<fx:root styleClass="room" type="javafx.scene.layout.GridPane"  GridPane.columnIndex="1" GridPane.vgrow="always"
+<?import com.jfoenix.validation.RequiredFieldValidator?>
+<fx:root styleClass="room" type="javafx.scene.layout.GridPane" GridPane.columnIndex="1" GridPane.vgrow="always"
          fx:id="chatContainer" style="-fx-background-color: white" xmlns:fx="http://javafx.com/fxml">
         <padding>
             <Insets left="100" right="100"/>
@@ -25,7 +26,12 @@
         </VBox>
         <StackPane GridPane.rowIndex="1" GridPane.hgrow="always">
             <HBox alignment="CENTER" spacing="10">
-                <JFXTextArea fx:id="message" promptText="Say something..." labelFloat="true" maxHeight="50"></JFXTextArea>
+                <JFXTextArea fx:id="message" promptText="Say something..." labelFloat="true" maxHeight="50">
+                    <validators>
+                        <RequiredFieldValidator message="">
+                        </RequiredFieldValidator>
+                    </validators>
+                </JFXTextArea>
                 <FontIcon fx:id="sendBtn" iconLiteral="far-paper-plane" iconSize="32" styleClass="icon-button" />
             </HBox>
         </StackPane>
