--- a/src/main/resources/controls/ChatroomControl.fxml
+++ b/src/main/resources/controls/ChatroomControl.fxml
@@ -12,12 +12,19 @@
 <?import com.jfoenix.validation.RequiredFieldValidator?>
 <fx:root styleClass="room" type="javafx.scene.layout.GridPane" GridPane.columnIndex="1" GridPane.vgrow="always"
          fx:id="chatContainer" style="-fx-background-color: white" xmlns:fx="http://javafx.com/fxml">
-        <padding>
-            <Insets left="100" right="100"/>
-        </padding>
         <VBox GridPane.rowIndex="0" spacing="10">
-            <Label styleClass="title-1" fx:id="roomName">-</Label>
+            <GridPane styleClass="room-header">
+                <Label GridPane.columnIndex="0" styleClass="title-1" fx:id="roomName">-</Label>
+                <FontIcon fx:id="leaveBtn" GridPane.columnIndex="1" iconLiteral="fas-sign-out-alt" iconSize="32" styleClass="icon-button" />
+                <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="85.0" prefWidth="100.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="15.0" prefWidth="100.0" />
+                </columnConstraints>
+            </GridPane>
             <ScrollPane maxHeight="Infinity" fitToWidth="true">
+                <padding>
+                    <Insets left="100" right="100"/>
+                </padding>
                 <content>
                     <VBox styleClass="messages-list" fx:id="messagesList">
                     </VBox>
